# robot-arm-trajectory-and-rotation-ros

./: README.md
robotlar_ws/devel/: .catkin  _setup_util.py  local_setup.sh
robotlar_ws/devel/lib/gazebo_plugins_rtg/: cmd
robotlar_ws/devel/lib/pkgconfig/: gazebo_plugins_rtg.pc  ur10_kinematics.pc
robotlar_ws/devel/lib/ur10_kinematics/: ur10_kinematics_node  ur10_trajectory_node
robotlar_ws/devel/share/gazebo_plugins_rtg/cmake/: gazebo_plugins_rtgConfig.cmake
robotlar_ws/devel/share/ur10_kinematics/cmake/: ur10_kinematicsConfig.cmake
robotlar_ws/src/ur10_kinematics/: CMakeLists.txt  package.xml
robotlar_ws/src/ur10_kinematics/include/ur10_kinematics/: kinematics.h
robotlar_ws/src/ur10_kinematics/launch/: trajectory.launch
robotlar_ws/src/ur10_kinematics/src/: kinematics.cpp  ur10_kinematics_node.cpp  ur10_trajectory_node.cpp
