<?xml version="1.0"?>
<package format="2">
  <name>ur10_kinematics</name>
  <version>0.1.0</version>
  <description>
    UR10 forward and inverse kinematics implementation for Gazebo simulation
  </description>

  <maintainer email="student@example.com">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  
  <build_depend>eigen</build_depend>
</package>
